cmake_minimum_required(VERSION 3.16)
project(Cpp-Snippets)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Cpp-Snippets-01-nullptr)
add_subdirectory(Cpp-Snippets-02-constexpr)
add_subdirectory(Cpp-Snippets-03-decltype)
add_subdirectory(Cpp-Snippets-04-auto)
add_subdirectory(Cpp-Snippets-05-enum)
add_subdirectory(Cpp-Snippets-06-final)
add_subdirectory(Cpp-Snippets-07-lambda)
add_subdirectory(Cpp-Snippets-08-move)
#add_subdirectory(Cpp-Snippets-09-sharedptr)
#add_subdirectory(Cpp-Snippets-10-templates)